# plot-prototype

./: pyproject.toml
example/: simple.ipynb
mas/libs/phanpy/colors/: ggsci.py
mas/libs/phanpy/ipython/: detect_ipython.py
mas/libs/phanpy/metaclass/: singleton.py
mas/libs/phanpy/plotting/: __init__.py  base.py  constants.py  display.py  facet.py  factor.py  field.py  legends.py  options.py  palette.py  props.py  render.py  setup.py  spec.py  traits.py
mas/libs/phanpy/plotting/composable/: plot.py  renderable.py
mas/libs/phanpy/plotting/composable/glyphs/: __init__.py  abstract.py  area.py  bar.py  line.py  scatter.py  step.py  text.py
mas/libs/phanpy/plotting/composable/stats/: boxplot.py  histogram.py  trend.py
mas/libs/phanpy/plotting/layer/: grid.py  plot.py  renderable.py
mas/libs/phanpy/types/: color.py  primitive.py  typeddict.py
mas/libs/phanpy/utils/: traits.py
