[tool.poetry]
name = "mas-plotting-prototype"
version = "0.1.0"
description = ""
authors = ["johnnyxcy <johnny.xcy1997@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bokeh = "^3.5.2"
typing-extensions = "^4.12.2"
polars = "^1.7.1"
pydantic = "^2.9.2"
numpy = "^2.1.1"

[tool.pyright]
typeCheckingMode = "strict"
reportUnnecessaryIsInstance = "none"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
