[tool.poetry]
name = "mas-plotting-prototype"
version = "0.1.0"
description = ""
authors = ["johnnyxcy <johnny.xcy1997@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bokeh = "^3.5.2"
typing-extensions = "^4.12.2"
polars = "^1.7.1"
pydantic = "^2.9.2"
numpy = "^2.1.1"
ipython = "^8.27.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.pyright]
typeCheckingMode = "strict"

reportPrivateUsage = "none"
reportConstantRedefinition = "none"

reportUnnecessaryIsInstance = "none"
reportUnnecessaryComparison = "none"

reportUnknownMemberType = "warning"
reportUnknownParameterType = "warning"
reportUnknownPropertyType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
